--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.29.0",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-file-system": "~15.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
